--- a/index.html
+++ b/index.html
@@ -1,195 +1,215 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<meta charset="UTF-8">
-<meta name="viewport" content="width=device-width, initial-scale=1.0">
-<title>PMNP-IS Help Center</title>
-<style>
-  body {
-    font-family: 'Inter', sans-serif;
-    background-color: #f5f7fa;
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    padding: 30px;
-  }
-  .container {
-    background: #fff;
-    padding: 30px;
-    border-radius: 16px;
-    box-shadow: 0 8px 20px rgba(0,0,0,0.1);
-    width: 700px;
-  }
-  h2 {
-    text-align: center;
-    color: #2563eb;
-    margin-bottom: 10px;
-  }
-  label {
-    font-weight: 600;
-    display: block;
-    margin-top: 15px;
-  }
-  input, select, textarea {
-    width: 100%;
-    padding: 10px;
-    margin-top: 6px;
-    border-radius: 8px;
-    border: 1px solid #ddd;
-  }
-  button {
-    width: 100%;
-    background-color: #2563eb;
-    color: white;
-    border: none;
-    border-radius: 8px;
-    padding: 12px;
-    font-size: 16px;
-    margin-top: 20px;
-    cursor: pointer;
-  }
-  button:hover {
-    background-color: #1d4ed8;
-  }
-</style>
+  <meta charset="utf-8" />
+  <meta name="viewport" content="width=device-width,initial-scale=1" />
+  <title>PMNP-IS Help Center</title>
+  <script src="https://cdn.tailwindcss.com"></script>
 </head>
-<body>
-
-<div class="container">
-  <h2>PMNP-IS Help Center</h2>
-  <form id="helpForm">
-    <label>Full Name</label>
-    <input type="text" name="name" required>
-
-    <label>Email</label>
-    <input type="email" name="email" required>
-
-    <label>CC</label>
-    <input type="text" name="cc" placeholder="Optional">
-
-    <label>Support Level</label>
-    <select id="supportLevel" name="supportLevel" required>
-      <option value="">Select Support Level</option>
-      <option value="MPMO Support">MPMO Support</option>
-      <option value="Regional Support">Regional Support</option>
-      <option value="Provincial Support">Provincial Support</option>
-      <option value="NPMO Technical Workstreams">NPMO Technical Workstreams</option>
-    </select>
-
-    <div id="orgunitFields">
-      <label>Region</label>
-      <select id="region" name="region"></select>
-
-      <label>Province</label>
-      <select id="province" name="province"></select>
-
-      <label>Municipality</label>
-      <select id="municipality" name="municipality"></select>
+<body class="bg-gray-50 min-h-screen flex items-center justify-center">
+  <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-3xl">
+    <div class="flex justify-center mb-4">
+      <img src="logo.png" alt="PMNP-IS Logo" class="h-16 w-auto" />
     </div>
 
-    <label>Category</label>
-    <select name="category" required>
-      <option>HCSC Questions/Masterlists</option>
-      <option>UI/UX</option>
-      <option>User Accounts</option>
-      <option>Additional Features</option>
-      <option>Formula and Logics</option>
-      <option>Reports and Dashboard</option>
-      <option>User Role and Access</option>
-      <option>Function</option>
-    </select>
+    <h1 class="text-2xl font-bold text-center text-blue-700 mb-6">PMNP-IS Help Center</h1>
 
-    <label>Message</label>
-    <textarea name="message" rows="4" required></textarea>
+    <form id="ticketForm" class="grid grid-cols-1 md:grid-cols-2 gap-4" enctype="multipart/form-data">
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Full Name</label>
+        <input type="text" name="name" required class="w-full border rounded-md p-2" />
+      </div>
 
-    <label>Attachments</label>
-    <input type="file" name="files" multiple>
+      <div>
+        <label class="block text-sm font-semibold">Email</label>
+        <input type="email" name="email" required class="w-full border rounded-md p-2" />
+      </div>
 
-    <button type="submit">Submit Ticket</button>
-  </form>
-</div>
+      <div>
+        <label class="block text-sm font-semibold">CC (optional)</label>
+        <input type="email" name="cc" placeholder="Enter additional email" class="w-full border rounded-md p-2" />
+      </div>
 
-<script>
-const SCRIPT_URL = "https://script.google.com/macros/s/AKfycbwYaYXC_u0ixJnSmkParMGlW1d-S6Q8vLQuL1bnrU76_X6Vx6IZ0xwXM7giaKOea1u4/exec"; // Replace with your deployed Apps Script URL
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Position</label>
+        <input type="text" name="position" class="w-full border rounded-md p-2" />
+      </div>
 
-const supportLevel = document.getElementById("supportLevel");
-const orgunitFields = document.getElementById("orgunitFields");
-const regionSelect = document.getElementById("region");
-const provinceSelect = document.getElementById("province");
-const municipalitySelect = document.getElementById("municipality");
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Support Level</label>
+        <select id="supportLevel" name="supportLevel" required class="w-full border rounded-md p-2">
+          <option value="">Select Support Level</option>
+          <option value="MPMO Support">MPMO Support</option>
+          <option value="Provincial Support">Provincial Support</option>
+          <option value="Regional Support">Regional Support</option>
+          <option value="NPMO Technical Workstreams">NPMO Technical Workstreams</option>
+        </select>
+      </div>
 
-let regionData = [];
+      <div id="regionWrapper" class="hidden col-span-2 md:col-span-1">
+        <label class="block text-sm font-semibold">Region</label>
+        <select id="region" name="region" class="w-full border rounded-md p-2"></select>
+      </div>
 
-// Load JSON orgunit file
-fetch("regionData.json")
-  .then(res => res.json())
-  .then(data => {
-    regionData = data;
-    populateRegions();
-  });
+      <div id="provinceWrapper" class="hidden col-span-2 md:col-span-1">
+        <label class="block text-sm font-semibold">Province</label>
+        <select id="province" name="province" class="w-full border rounded-md p-2"></select>
+      </div>
 
-function populateRegions() {
-  regionSelect.innerHTML = `<option value="">Select Region</option>`;
-  regionData.forEach(region => {
-    regionSelect.innerHTML += `<option value="${region.region}">${region.region}</option>`;
-  });
-}
+      <div id="municipalityWrapper" class="hidden col-span-2">
+        <label class="block text-sm font-semibold">Municipality</label>
+        <select id="municipality" name="municipality" class="w-full border rounded-md p-2"></select>
+      </div>
 
-regionSelect.addEventListener("change", () => {
-  const region = regionData.find(r => r.region === regionSelect.value);
-  provinceSelect.innerHTML = `<option value="">Select Province</option>`;
-  municipalitySelect.innerHTML = `<option value="">Select Municipality</option>`;
-  if (region) {
-    region.provinces.forEach(p => {
-      provinceSelect.innerHTML += `<option value="${p.name}">${p.name}</option>`;
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Category</label>
+        <select id="category" name="category" required class="w-full border rounded-md p-2">
+          <option value="">Select Category</option>
+          <option value="HCSC Questions/Masterlists">HCSC Questions/Masterlists</option>
+          <option value="UI/UX">UI/UX</option>
+          <option value="NPMO Support">NPMO Support</option>
+          <option value="User Role and Access">User Role and Access</option>
+          <option value="Functionality Errors">Functionality Errors</option>
+          <option value="Backend">Backend</option>
+          <option value="Dashboards, Reports and Line List">Dashboards, Reports and Line List</option>
+        </select>
+      </div>
+
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Description</label>
+        <textarea name="message" rows="3" required class="w-full border rounded-md p-2"></textarea>
+      </div>
+
+      <div class="col-span-2">
+        <label class="block text-sm font-semibold">Attachments (optional)</label>
+        <input type="file" name="files" id="filesInput" multiple class="w-full border rounded-md p-2" />
+      </div>
+
+      <div class="col-span-2 text-center mt-4">
+        <button id="submitBtn" type="submit" class="bg-blue-600 text-white px-6 py-2 rounded-md hover:bg-blue-700 transition">Submit Ticket</button>
+      </div>
+    </form>
+
+    <div id="toast" class="hidden mt-4 text-center text-white py-2 rounded-md"></div>
+  </div>
+
+  <script>
+    // ====== CONFIG: set your deployed Apps Script URL here ======
+    const scriptURL = "https://script.google.com/macros/s/AKfycbwYaYXC_u0ixJnSmkParMGlW1d-S6Q8vLQuL1bnrU76_X6Vx6IZ0xwXM7giaKOea1u4/exec";
+    // ====== Path to your region/province/municipality JSON (edit if you store elsewhere) ======
+    const regionJsonPath = "regionData.json";
+
+    // load region JSON (same behavior as before)
+    let regionData = {};
+    (async function loadRegions(){
+      try {
+        const r = await fetch(regionJsonPath);
+        regionData = await r.json();
+        const regionSel = document.getElementById('region');
+        regionSel.innerHTML = '<option value="">Select Region</option>';
+        Object.keys(regionData).forEach(k => {
+          regionSel.innerHTML += `<option value="${k}">${k}</option>`;
+        });
+      } catch(e) { console.warn('region load failed', e); }
+    })();
+
+    const supportSelect = document.getElementById("supportLevel");
+    const regionWrapper = document.getElementById("regionWrapper");
+    const provinceWrapper = document.getElementById("provinceWrapper");
+    const municipalityWrapper = document.getElementById("municipalityWrapper");
+
+    document.getElementById('region').addEventListener('change', () => {
+      const region = document.getElementById('region').value;
+      const provSel = document.getElementById('province');
+      provSel.innerHTML = '<option value="">Select Province</option>';
+      document.getElementById('municipality').innerHTML = '<option value="">Select Municipality</option>';
+      if (regionData[region]) Object.keys(regionData[region]).forEach(p=> provSel.innerHTML += `<option value="${p}">${p}</option>`);
     });
-  }
-});
 
-provinceSelect.addEventListener("change", () => {
-  const region = regionData.find(r => r.region === regionSelect.value);
-  const province = region?.provinces.find(p => p.name === provinceSelect.value);
-  municipalitySelect.innerHTML = `<option value="">Select Municipality</option>`;
-  if (province) {
-    province.municipalities.forEach(m => {
-      municipalitySelect.innerHTML += `<option value="${m}">${m}</option>`;
+    document.getElementById('province').addEventListener('change', () => {
+      const region = document.getElementById('region').value;
+      const province = document.getElementById('province').value;
+      const muniSel = document.getElementById('municipality');
+      muniSel.innerHTML = '<option value="">Select Municipality</option>';
+      if (regionData[region] && regionData[region][province]) {
+        regionData[region][province].forEach(m=> muniSel.innerHTML += `<option value="${m}">${m}</option>`);
+      }
     });
-  }
-});
 
-// Support Level Logic
-supportLevel.addEventListener("change", () => {
-  const level = supportLevel.value;
-  if (level === "NPMO Technical Workstreams") {
-    orgunitFields.style.display = "none";
-  } else {
-    orgunitFields.style.display = "block";
-    regionSelect.parentElement.style.display = "block";
-    provinceSelect.parentElement.style.display = "block";
-    municipalitySelect.parentElement.style.display = "block";
+    supportSelect.addEventListener('change', () => {
+      const val = supportSelect.value;
+      regionWrapper.classList.add('hidden');
+      provinceWrapper.classList.add('hidden');
+      municipalityWrapper.classList.add('hidden');
+      if (val === 'MPMO Support') {
+        regionWrapper.classList.remove('hidden'); provinceWrapper.classList.remove('hidden'); municipalityWrapper.classList.remove('hidden');
+      } else if (val === 'Provincial Support') {
+        regionWrapper.classList.remove('hidden'); provinceWrapper.classList.remove('hidden');
+      } else if (val === 'Regional Support') {
+        regionWrapper.classList.remove('hidden');
+      }
+    });
 
-    if (level === "Regional Support") {
-      provinceSelect.parentElement.style.display = "none";
-      municipalitySelect.parentElement.style.display = "none";
-    } else if (level === "Provincial Support") {
-      municipalitySelect.parentElement.style.display = "none";
-    }
-  }
-});
+    // submit handler with XHR and file keys file1,file2,...
+    document.getElementById('ticketForm').addEventListener('submit', function(ev) {
+      ev.preventDefault();
+      const form = ev.target;
+      const toast = document.getElementById('toast');
+      const submitBtn = document.getElementById('submitBtn');
+      toast.classList.add('hidden');
+      toast.textContent = '';
 
-// Form Submit
-document.getElementById("helpForm").addEventListener("submit", async (e) => {
-  e.preventDefault();
-  const formData = new FormData(e.target);
-  try {
-    const res = await fetch(SCRIPT_URL, { method: "POST", body: formData });
-    const json = await res.json();
-    if (json.success) alert("✅ Ticket submitted successfully!");
-    else alert("❌ " + json.error);
-  } catch (err) {
-    alert("❌ Network error: " + err.message);
-  }
-});
-</script>
+      // disable
+      submitBtn.disabled = true;
+      submitBtn.textContent = "Submitting...";
+
+      const formData = new FormData();
+
+      // append text fields
+      const fields = ['name','email','cc','position','supportLevel','region','province','municipality','category','message'];
+      fields.forEach(k => {
+        const el = form.querySelector(`[name="${k}"]`);
+        if (el) formData.append(k, el.value || '');
+      });
+
+      // append files individually as file1,file2,...
+      const filesInput = document.getElementById('filesInput');
+      if (filesInput && filesInput.files && filesInput.files.length) {
+        Array.from(filesInput.files).forEach((f, i) => {
+          formData.append(`file${i+1}`, f, f.name);
+        });
+      }
+
+      // send via fetch (CORS allowed by backend)
+      fetch(scriptURL, { method: 'POST', body: formData, mode: 'cors' })
+      .then(async res => {
+        // try parse JSON response
+        let data = null;
+        try { data = await res.json(); } catch(e){ data = null; }
+        if (res.ok && data && data.success) {
+          toast.textContent = `✅ Ticket submitted — ID: ${data.ticketId}`;
+          toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-green-600';
+          toast.classList.remove('hidden');
+          form.reset();
+        } else {
+          const errMsg = data && data.error ? data.error : `HTTP ${res.status}`;
+          toast.textContent = `❌ ${errMsg}`;
+          toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-red-600';
+          toast.classList.remove('hidden');
+          console.error('Submit failed', res.status, data);
+        }
+      })
+      .catch(err => {
+        toast.textContent = `❌ Network error — check console`;
+        toast.className = 'mt-4 text-center text-white py-2 rounded-md bg-red-600';
+        toast.classList.remove('hidden');
+        console.error('Fetch error', err);
+      })
+      .finally(() => {
+        submitBtn.disabled = false;
+        submitBtn.textContent = 'Submit Ticket';
+      });
+    });
+  </script>
 </body>
 </html>
