--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
 <body class="bg-gray-50 min-h-screen flex items-center justify-center">
   <div class="bg-white p-8 rounded-2xl shadow-md w-full max-w-3xl">
     <div class="flex justify-center mb-4">
-      <img src="logo.png" alt="PMNP-IS Logo" class="h-16 w-auto" />
+      <img src="pmnplogo.png" alt="PMNP-IS Logo" class="h-16 w-auto" />
     </div>
 
     <h1 class="text-2xl font-bold text-center text-blue-700 mb-6">PMNP-IS Help Center</h1>
