with signin redirect URL in index.html
Signed-off-by: reybetita <reynoelbetita1119@gmail.com>

--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
-  <meta http-equiv="refresh" content="1; url='https://script.google.com/macros/s/AKfycbyyOD59J4eyU_DlEUYkQ_vcAaixwiQkBENlKWRPS_urIp66bt9pJaTX7UqNJsepc_PQ/exec'" />
+  <meta http-equiv="refresh" content="1; url='https://accounts.google.com/AccountChooser?continue=https://script.google.com/macros/s/AKfycbyyOD59J4eyU_DlEUYkQ_vcAaixwiQkBENlKWRPS_urIp66bt9pJaTX7UqNJsepc_PQ/exec'" />
   <title>Redirecting to PMNP Helpdesk...</title>
   <style>
     body {
@@ -49,7 +49,7 @@
 </head>
 <body>
   <h1>Redirecting to PMNP Helpdesk...</h1>
-  <p>If you are not redirected automatically, <a href="https://script.google.com/macros/s/AKfycbyyOD59J4eyU_DlEUYkQ_vcAaixwiQkBENlKWRPS_urIp66bt9pJaTX7UqNJsepc_PQ/exec">click here</a>.</p>
+  <p>If you are not redirected automatically, <a href="https://accounts.google.com/AccountChooser?continue=https://script.google.com/macros/s/AKfycbyyOD59J4eyU_DlEUYkQ_vcAaixwiQkBENlKWRPS_urIp66bt9pJaTX7UqNJsepc_PQ/exec">click here</a>.</p>
   <div class="spinner"></div>
 </body>
 </html>
